<resources>
    <string name="app_name">X-CASH</string>
    <string name="contact_us_url">https://xcashteam.atlassian.net/servicedesk/customer/portal/1/group/-1</string>
    <string name="about_us_url">https://github.com/X-CASH-official/android-wallet/releases</string>
    <string name="base_layout_load_completed_textView_text">Complete</string>
    <string name="base_recyclerview_lostviewtype_item_textView_text">Lost viewType in recyclerView</string>
    <string name="permission_setting_tips">Missing permissions. For the wallet to function correctly, please authorize the appropriate permissions.</string>
    <string name="permission_setting">Settings</string>
    <string name="permission_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_ok">OK</string>
    <string name="number_0_text">0</string>
    <string name="number_over_99_text">···</string>
    <string name="number_amount_0_text">0.00</string>
    <string name="progressDialogHelp_tips">Please wait...</string>
    <string name="normal_nodata_textView_text">No data</string>
    <string name="normal_load_completed_textView_text">Complete</string>
    <string name="normal_copySuccess_tips">Copied to clipboard!</string>
    <string name="over_request_tips">Request exceeds the processing limit. Please try again later</string>
    <string name="wallet_not_exists_tips">The wallet doesn\'t exist</string>
    <string name="password_can_not_empty_tips">Password cannot be empty!</string>
    <string name="check_password_error_tips">Check password error</string>
    <string name="set_daemon_error_tips">Set daemon failed</string>
    <string name="create_transaction_error_tips">Transaction creation failed. Please check the fields for errors</string>
    <string name="send_transaction_error_tips">Transaction broadcast failed</string>
    <string name="not_find_active_wallet_tips">Could not find the current wallet</string>
    <string name="close_active_wallet_error_tips">Could not close the current wallet</string>
    <string name="get_wallet_data_error_tips">Could not fetch  wallet data</string>
    <string name="delegate_vote_error_tips">Could not vote for delegate</string>
    <string name="delegate_register_error_tips">Could not register the delegate</string>
    <string name="delegate_update_error_tips">Could not update the delegate info</string>
    <string name="delegate_remove_error_tips">Could not remove the delegate</string>
    <string name="qrcode_cancel_tips">QR code scanning has been interrupted</string>
    <string name="wallet_service_not_running_tips">Wallet service not running</string>
    <string name="service_uninitialized_tips">Service not ready, please retry</string>
    <string name="start_receive_transaction_notfication_tips">Received a transaction of :</string>
    <string name="retry_bind_service_tips">Service disconnected, trying to reconnect.. please try gain later</string>
    <string name="show_more_tips">Show More</string>
    <string name="address_error_tips">Error address</string>
    <string name="server_run_tips">XCASH server is running!</string>
    <string name="waiting_to_vote_tips">Waiting to vote for</string>
    <string name="popupwindow_textViewOK_text">OK</string>
    <string name="popupwindow_textViewCancel_text">Cancel</string>
    <string name="popupwindow_password_textViewPasswordTips_text">Enter Wallet Password:</string>
    <string name="popupwindow_password_editTextPassword_hint">Your password</string>
    <string name="popupwindow_password_textViewPasswordHintTips_text">Password Hint</string>
    <string name="activity_splash_textViewCopyright_text">Copyright © 2019-2020 The X-Cash Foundation</string>
    <string name="activity_splash_initDaemonError_tips">Set daemon error</string>
    <string name="activity_choose_wallet_buttonCreateWallet_text">Create Wallet</string>
    <string name="activity_choose_wallet_buttonImportWallet_text">Import Wallet</string>
    <string name="activity_choose_wallet_textViewWalletTips_text">You need at least one wallet. Create a new wallet or import an existing one.</string>
    <string name="activity_set_wallet_textViewTips_text">• Verify SHA-256 \nFor the security and safety of your assets, please match the SHA-256 hash corresponding to the current version of the app.\n• Set password \nFor the security and safety of your assets, please set a password used for authorization of your private key and transactions.</string>
    <string name="activity_set_wallet_editTextLoginName_hint">Your wallet name</string>
    <string name="activity_set_wallet_editTextPassword_hint">Your password</string>
    <string name="activity_set_wallet_editTextConfirmPassword_hint">Confirm your password</string>
    <string name="activity_set_wallet_editTextDescription_hint">Password Hint</string>
    <string name="activity_set_wallet_textViewValidateSha256Tips_text">Please make sure to download from the official channel</string>
    <string name="activity_set_wallet_textViewAgreementTips_text">I have verified the SHA-256 hash for the current version</string>
    <string name="activity_set_wallet_passwordConfirm_tips">Passwords are not the same.</string>
    <string name="activity_set_wallet_confirmEmpty_tips">Wallet name and password cannot be empty</string>
    <string name="activity_set_wallet_unCheck_tips">Please validate the SHA-256 hash for current version</string>
    <string name="activity_set_wallet_SHA256_tips">Signature SHA-256:</string>
    <string name="activity_set_wallet_passwordDigitError_tips">Password must be at least 6 characters</string>
    <string name="activity_create_wallet_textViewTitle_text">Create Wallet</string>
    <string name="activity_create_wallet_textViewTips_text">• Back-up mnemonic seed:\nLosing this will result in the loss of all your funds. Write it down and store it in a safe place.\n• Avoid screenshots:\nAnyone with your mnemonic seed can access and spend your assets.</string>
    <string name="activity_create_wallet_buttonNext_text">I have written down my mnemonic seed</string>
    <string name="activity_create_wallet_waitingCreateWalletTips_text">Please wait for the wallet creation</string>
    <string name="activity_create_wallet_writeDownTips_text">Please write down your mnemonic seed</string>
    <string name="activity_create_wallet_createWalletError_tips">Wallet creation error</string>
    <string name="activity_create_wallet_walletExist_tips">This name wallet have exist</string>
    <string name="activity_create_wallet_getActiveWalletError_tips">Do not have active wallet</string>
    <string name="activity_import_wallet_textViewTitle_text">Import Wallet</string>
    <string name="activity_import_wallet_fragment_tabLayout_mnemonic_text">Import from Mnemonic seed</string>
    <string name="activity_import_wallet_fragment_tabLayout_keys_text">Import from PrivateKeys</string>
    <string name="activity_import_wallet_fragment_quick_restore_height_tips">Restore from height:</string>
    <string name="activity_import_wallet_fragment_mnemonic_textViewMnemonicTips_text">Mnemonic Seed</string>
    <string name="activity_import_wallet_fragment_mnemonic_editTextMnemonic_hint">Please enter mnemonic. Separate each word by single spaces</string>
    <string name="activity_import_wallet_fragment_mnemonic_textViewSyncTips_text">Synchronize from date with first tx or specific block height to speed up sync</string>
    <string name="activity_import_wallet_fragment_mnemonic_textViewDate_text">Date of start sync (Optional)</string>
    <string name="activity_import_wallet_fragment_mnemonic_editTextBlockHeight_text">Block Height (Optional)</string>
    <string name="activity_import_wallet_fragment_mnemonic_mnemonicEmpty_tips">Mnemonic seed cannot be empty</string>
    <string name="activity_import_wallet_fragment_mnemonic_buttonNext_text">Import Wallet</string>
    <string name="activity_import_wallet_fragment_keys_textViewPrivateViewKeyTips_text">Private View Key</string>
    <string name="activity_import_wallet_fragment_keys_editTextPrivateViewKey_hint">Enter your private view key</string>
    <string name="activity_import_wallet_fragment_keys_textViewPrivateSpendKeyTips_text">Private Spend Key (Optional)</string>
    <string name="activity_import_wallet_fragment_keys_editTextPrivateSpendKey_hint">Enter your private spend key. If not provided you will not be able to spend the funds.</string>
    <string name="activity_import_wallet_fragment_keys_textViewInputAddressTips_text">Wallet\'s Address</string>
    <string name="activity_import_wallet_fragment_keys_editTextInputAddressKey_hint">Enter your wallet\'s address</string>
    <string name="activity_create_wallet_confirm_textViewTitle_text">Check Mnemonic</string>
    <string name="activity_create_wallet_confirm_textViewTips_text">To ensure that you correctly copied the mnemonic seed, please transcript it again.</string>
    <string name="activity_create_wallet_confirm_textViewWordTips_text">Enter your mnemonic seed.</string>
    <string name="activity_create_wallet_confirm_buttonNext_text">Check</string>
    <string name="activity_create_wallet_confirm_confirmMnemonicEmpty_tips">Mnemonic seed cannot be empty</string>
    <string name="activity_create_wallet_confirm_confirmMnemonicUnEquals_tips">The mnemonic seed is incorrect</string>
    <string name="layout_active_wallet_textViewCopyAddress_text">Copy</string>
    <string name="activity_main_bottomTab_textViewHomeTab_text">Home</string>
    <string name="activity_main_bottomTab_textViewFindTab_text">Address</string>
    <string name="activity_main_bottomTab_textViewWalletTab_text">Wallet</string>
    <string name="activity_main_exitTips">Press again to exit</string>
    <string name="activity_main_home_close_active_wallet_tips">Confirm to close active wallet?</string>
    <string name="activity_main_navigationview_textViewWalletTitle_text">Wallet Manager</string>
    <string name="activity_main_navigationview_textViewAddressTitle_text">Address Manager</string>
    <string name="activity_main_navigationview_textViewNodeSetting_text">Node Settings</string>
    <string name="activity_main_navigationview_textViewLanguageSetting_text">Language Settings</string>
    <string name="activity_main_navigationview_textViewContactUs_text">Contact Us</string>
    <string name="activity_main_navigationview_textViewAboutUs_text">About Us</string>
    <string name="activity_main_navigationview_checkBoxExit_text">Close server when exit</string>
    <string name="activity_wallet_manager_textViewTitle_text">Wallet Manager</string>
    <string name="activity_wallet_manager_item_textViewActiveStatus_text">active</string>
    <string name="activity_wallet_manager_item_textViewWalletType_text">X-CASH</string>
    <string name="activity_about_us_textViewDetails_text">X-Cash is a community driven and open-source project developing the new standard of digital payment. Unique blockchain network with public and private transactions, custom DPOS consensus, and soon sidechains. Based and improved upon the renowned CryptoNote protocol, X-Cash aims at becoming the standard in digital payment and transaction settlement.\n• FlexPrivacy: X-Cash proposes the flexibility to send a transaction privately or publicly, directly from your wallet by toggling a simple switch, without compromising your privacy.\n• Delegated Proof of Private Stake (DPOPS): To tackle scalability and future upgrades while reducing the energy comsuption of the network, we are developing a customized and unique DPOS consensus that can be implemented in any privacy coin.\n• Sidechains: Delegates will be able to host sidechains on the X-Cash network, providing an easy, secured, economical and customizable blockchain solution to match your project needs.</string>
    <string name="activity_about_us_textViewFindNewVersion_text">New version available on GitHub</string>
</resources>