<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/popupwindow_horizontal_margin"
    android:layout_marginTop="@dimen/popupwindow_vertical_margin"
    android:layout_marginRight="@dimen/popupwindow_horizontal_margin"
    android:layout_marginBottom="@dimen/popupwindow_vertical_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_normal_margin_narrow"
        app:cardCornerRadius="@dimen/drawable_normal_radius_broad">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPasswordHintTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/view_normal_margin_narrow"
                android:padding="@dimen/view_normal_margin_narrow"
                android:singleLine="true"
                android:text="@string/popupwindow_password_textViewPasswordHintTips_text"
                android:textColor="@color/darkColor_default"
                android:textSize="@dimen/textView_normal_textSize_default" />


            <TextView
                android:id="@+id/textViewPasswordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/view_normal_margin_narrow"
                android:layout_marginLeft="@dimen/view_normal_margin_default"
                android:layout_marginRight="@dimen/view_normal_margin_default"
                android:layout_marginTop="@dimen/view_normal_margin_broad"
                android:layout_marginBottom="@dimen/view_normal_margin_broad"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:textColor="?attr/mainColorText"
                android:textCursorDrawable="@drawable/normal_cursor"
                android:textSize="@dimen/textView_normal_textSize_default"
                tools:hint="@string/app_name" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_normal_widthOrHeight_narrow"
                android:layout_marginTop="@dimen/view_normal_margin_narrow"
                android:background="@color/line_normal_background" />

            <TextView
                android:id="@+id/textViewOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/view_normal_margin_default"
                android:textSize="@dimen/textView_normal_textSize_default"
                android:text="@string/popupwindow_textViewOK_text"
                android:textColor="@color/darkColor_default" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>